hphp/hack/test/typecheck/expression_trees/static_static_method_call.php.exp
File "static_static_method_call.php", line 11, characters 22-39:
Unsupported syntax for expression trees. (Parsing[1002])
